style.css
@import url('https://fonts.googleapis.com/css2?family=Anta&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

html {
box-sizing: border-box;
scroll-behavior: smooth;
}

body {
    margin: 0;
    min-height: 100vh;
    font-family: Raleway, sans-serif;
    font-size: 1.1rem;
}

nav {
    z-index: 10;
    display: block;
    position: fixed;
    padding: 15px;
    width: 100vw;
    background: rgb(192, 192, 192);
    border-bottom: 1px solid;
}

a {
    margin-right: 20px;
    color: black;
    text-decoration: none;
    font-weight: bold;
}

main {
    padding-top: 110px;
    padding-left: 15px;
    padding-right: 15px;
}

header {
    font-family: Anta, sans-serif;
    font-size: 3rem;
}

article {
    margin: 15px;
}

/* Media Query: Tablet or Smaller */
@media screen and (max-width: 1000px) {
    main {
        padding-top: 150px;
    }
}

